@@ -3,8 +3,8 @@ MANDIR=/usr/local/man/man1
 
 all:
 	make -C src all
-	make -C examples all
-	make -C htdocs all
+#	make -C examples all
+#	make -C htdocs all
 
 install:
 	mkdir -p $(BINDIR) $(MANDIR)
@@ -13,4 +13,4 @@ install:
 
 clean:
 	make -C src clean
-	make -C examples clean
+#	make -C examples clean
