@@ -1,3 +1,12 @@
+2007-11-15 Jim Garlick <garlick.jim@gmail.com>
+
+	* etc/gpib.conf : Readded with ni-usb config.
+
+	* src/gpib.c : Fixed some bugs that emerged when compiling with
+	linux-gpib again.
+
+	* gpib-utils.spec : Install the gpib-utils.conf file.
+
 2007-11-14 Jim Garlick <garlick.jim@gmail.com>
 
 	* src/dg535.c : Complete output query commands.  
